# deloitte-eval-adam-macudzinski

./: README.md
etl-pipeline/: README.md  deploy_db_and_run_etl.sh
etl-pipeline/infra/: run_terraform_deployment.sh
etl-pipeline/infra/terraform/: mysql_rds.tf  outputs.tf  provider.tf  sample.tfvars  variables.tf
etl-pipeline/python/: pyproject.toml
etl-pipeline/python/etl_pipelines/: user_data_pipeline.py
etl-pipeline/python/etl_pipelines/utils/: __init__.py  db.py  file.py  schema.py
ml-model-deployment/: README.md  install_minikube_mac.sh  run_full_deployment_pipeline.sh  setup_local_k8s.sh
ml-model-deployment/kubeflow/: install_kubeflow.sh
ml-model-deployment/kubeflow/kubeflow_pipelines/: pyproject.toml
ml-model-deployment/kubeflow/kubeflow_pipelines/kubeflow_pipelines/pipelines/: fashion_classifier.py
ml-model-deployment/kubeflow/kubeflow_pipelines/kubeflow_pipelines/scripts/: run_fashion_classifier_pipeline.py
ml-model-deployment/kubeflow/manifests/: inferenceservice_permissions.yaml
ml-model-deployment/ml_model_env/: Dockerfile  build_ml_model_docker.sh
ml-model-deployment/ml_model_env/python/deloitte-tensorflow/: pyproject.toml
ml-model-deployment/ml_model_env/python/deloitte-tensorflow/deloitte_tensorflow/: fashion_classifier_client.py
ml-model-deployment/ml_model_env/python/deloitte-tensorflow/deloitte_tensorflow/models/: fashion_classifier.py
ml-model-deployment/ml_model_env/python/deloitte-tensorflow/deloitte_tensorflow/scripts/: run_fashion_classifier_training.py
(+1 files in other folders)
