[tool.poetry]
name = "etl_pipelines"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "etl_pipelines"}]

[tool.poetry.dependencies]
python = "~3.8"
sqlmodel = "^0.0.8"
pandas = "^1.5.3"
requests = "^2.28.2"
mysqlclient = "^2.1.1"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
