[tool.poetry]
name = "kubeflow-pipelines"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "kubeflow_pipelines"}]

[tool.poetry.dependencies]
python = "^3.8"
kfp = "1.8.5"
kserve = "0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
